tests/baselines/reference/generatorOverloads1.errors.txt
tests/cases/conformance/es6/yieldExpressions/generatorOverloads1.ts(2,13): error TS1222: An overload signature cannot be declared as a generator.
tests/cases/conformance/es6/yieldExpressions/generatorOverloads1.ts(3,13): error TS1222: An overload signature cannot be declared as a generator.


==== tests/cases/conformance/es6/yieldExpressions/generatorOverloads1.ts (2 errors) ====
    module M {
        function* f(s: string): Iterable<any>;
                ~
!!! error TS1222: An overload signature cannot be declared as a generator.
        function* f(s: number): Iterable<any>;
                ~
!!! error TS1222: An overload signature cannot be declared as a generator.
        function* f(s: any): Iterable<any> { }
    }